syntax = "proto3";

package catalog;

// ===================================
// SERVICIO DEL CATÁLOGO
// ===================================
// Servicio que expone el microservicio de catálogo

service CatalogService {

  // Método que el Order-Service llamará antes de guardar la orden
  rpc ValidateOrder (ValidationRequest) returns (ValidationResponse);

  
  // consultas 
  rpc GetRestaurants (Empty) returns (RestaurantsResponse);
  rpc GetMenuItems (Empty) returns (MenuItemsResponse);
  //  Obtener productos por restaurante
  rpc GetMenuItemsByRestaurant (RestaurantRequest) returns (MenuItemsResponse);

  // ===============================
  // CRUD RESTAURANTES (NUEVO) ROL ADMINISTRADOR
  // ===============================

  rpc CreateRestaurant (CreateRestaurantRequest) returns (RestaurantActionResponse);
  rpc UpdateRestaurant (UpdateRestaurantRequest) returns (RestaurantActionResponse);
  rpc DeleteRestaurant (DeleteRestaurantRequest) returns (RestaurantActionResponse);

  // ===============================
  // CRUD RESTAURANTES rol RESTAURANTE
  // ===============================

  rpc CreateMenuItem (CreateMenuItemRequest) returns (MenuItemActionResponse);
  rpc UpdateMenuItem (UpdateMenuItemRequest) returns (MenuItemActionResponse);
  rpc DeleteMenuItem (DeleteMenuItemRequest) returns (MenuItemActionResponse);


  // ===============================
  // Obtener ordenesdetalle
  // ===============================

  rpc GetOrderDetails (OrderDetailsRequest) returns (OrderDetailsResponse);

}


// ===================================
// MODELOS DE VALIDACIÓN DE ORDEN
// ===================================

// Representa un item que el cliente quiere comprar
message OrderItem {
  int32 id_item = 1;          // ID del producto en el catálogo
  int32 cantidad = 2;         // Cantidad solicitada
  double precio_cliente = 3;  // Precio que el frontend envía
}

// Mensaje que recibe el catálogo para validar
message ValidationRequest {
  int32 id_restaurante = 1;       // Restaurante seleccionado
  repeated OrderItem items = 2;   // Lista de productos
}

// Respuesta del catálogo al order-service
message ValidationResponse {
  bool valido = 1;         // Indica si la orden es válida
  string mensaje = 2;      // Mensaje de error o éxito
}

// ===============================
// NUEVOS MÉTODOS PARA FRONTEND
// ===============================


// Mensaje vacío para consultas simples
message Empty {}

// Mensaje para pedir menú por restaurante
message RestaurantRequest {
  int32 id_restaurante = 1;
}

// Respuesta con lista de restaurantes
message RestaurantsResponse {
  repeated Restaurant restaurants = 1;
}

// Respuesta con lista de productos
message MenuItemsResponse {
  repeated MenuItem menuItems = 1;
}


// ===================================
// CRUD RESTAURANTES (NUEVO)
// ===================================

message CreateRestaurantRequest {
  string nombre = 1;
  string direccion = 2;
  bool activo = 3;
}

message UpdateRestaurantRequest {
  int32 id_restaurante = 1;
  string nombre = 2;
  string direccion = 3;
  bool activo = 4;
}

message DeleteRestaurantRequest {
  int32 id_restaurante = 1;
}

message RestaurantActionResponse {
  string mensaje = 1;
}

// ===================================
// MODELOS DE DATOS
// ===================================

// Modelo de restaurante
message Restaurant {
  int32 id_restaurante = 1;
  string nombre = 2;
  string direccion = 3;
   bool activo = 4;
}

// Modelo de producto del menú
message MenuItem {
  int32 id_item = 1;
  int32 id_restaurante = 2;
  string nombre = 3;
  double precio = 4;
  bool disponible = 5;
}

message CreateMenuItemRequest {
  int32 id_restaurante = 1;
  string nombre = 2;
  double precio = 3;
  bool disponible = 4;
}

message UpdateMenuItemRequest {
  int32 id_item = 1;
  string nombre = 2;
  double precio = 3;
  bool disponible = 4;
}

message DeleteMenuItemRequest {
  int32 id_item = 1;
}

message MenuItemActionResponse {
  string mensaje = 1;
}


// ===================================
// DETALLES PARA ORDER-SERVICE
// ===================================

message OrderDetailsRequest {
  int32 id_restaurante = 1;
  repeated int32 id_items = 2;
}

message OrderDetailsResponse {
  Restaurant restaurant = 1;
  repeated MenuItem items = 2;
}